--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_URL="http://localhost:3000"
+MONGODB_URI="mongodb+srv://akiran1sei:akiran1sei@cluster0.rp1u5ye.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0"
