--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_URL="https://coffee-groups.vercel.app"
+MONGODB_URI="mongodb+srv://akiran1sei:akiran1sei@cluster0.rp1u5ye.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0"
