--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json-server": "json-server --watch src/data/groups.json --port 3001"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "json-server": "^1.0.0-alpha.23",
     "mongoose": "^8.3.2",
     "next": "^14.2.3",
     "react": "^18.3.0",
