--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "json-server": "json-server --watch src/data/groups.json --port 3001"
+    "lint": "next lint"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
