--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "mongoose": "^8.3.2",
     "next": "^14.2.3",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "eslint": "^8",
