--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "json-server": "^1.0.0-alpha.23",
     "mongoose": "^8.3.2",
     "next": "^14.2.3",
